--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,30 @@
 body {
     background-color: pink;
 }
+
+h1 {
+    font-weight: bold;
+    font-size: 200%
+    text-align: left;
+
+}
+
+nav {
+    text-align: right;
+    display: inline;
+    margin: 5px;
+}
+
+section {
+    background-color: yellow;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+   
+    padding: 25px; 
+    border: 5px dashed black none;
+}
+
+aside {
+    background-color: white;
+}
