--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,16 @@ header {
     margin-bottom: 10px;
 }
 
+ #selfie {
+    height: 10%;
+    width: 10%;
+    position: relative;
+    top: 10.5em;
+   padding-left: 15px;
+   margin-top: -140px;
+
+ }
+
 h1 {
     display: inline-block;
     font-weight: bold;
@@ -128,8 +138,8 @@ h2 {
     width: 50%;
     height: 20%;
     font-family: Papyrus, sans-serif;
-    position: absolute;
-    bottom: -35em;
+    position: relative;
+    bottom: 10em;
     left: 0em;
     border: none;
 }
@@ -186,6 +196,7 @@ footer {
     border-right: none;
     border-width: 5px;
     margin-left: -15px;
+    margin-top: -100px;
     
 }
 
@@ -200,7 +211,18 @@ footer {
     font-weight: bold;
 }
 
-img {
-    border: none;
-    background: linear-gradient(90deg, blue, black);
+
+
+/*media-query*/
+
+@media (max-width: 840px) {
+    * {
+        width: 49%
+    }
+}
+
+@media (max-width: 767px) {
+    * {
+        width: 100%
+    }
 }
