--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/*Created a variable for the main color used*/
+
 :root {
     --colored-border: rgb(190, 165, 20);
 }
@@ -62,9 +64,9 @@ nav a:visited {
 } 
 
 nav a:hover {
-    color:rgb(190, 165, 20);
+    color: var(--colored-border);
 }
-    
+
 nav a {
     text-decoration: none;
 }
@@ -125,6 +127,12 @@ section {
     margin-bottom: 20px; 
 }
 
+.under-construction-main:visited {
+    text-decoration: none;
+}
+
+/*Img heights smaller for the secondary projects*/
+
 .under-construction {
    
     height: 300px;
@@ -138,7 +146,7 @@ section {
 }
 
 .under-construction-main:hover {
-    box-shadow: 0 0 10px 15px rgb(190, 165, 20);
+    box-shadow: 0 0 10px 15px var(--colored-border);
 }
 
 .under-construction-main img {
@@ -146,10 +154,12 @@ section {
     object-position: top center;
 }
 
+/*Alot of shared sytles between the main img and secondary*/
+
 .container1 p, .container2 p {
     border: none;
     background-color: black;
-    color: rgb(190, 165, 20);
+    color: var(--colored-border);
     padding: 10px;
     margin-bottom: 10px;
     font-family: papyrus, sans-serif;
@@ -165,7 +175,7 @@ section {
 /*Styling the aside element Aboout Me*/
 
 aside {
-    background: linear-gradient(90deg, rgb(190, 165, 20), black);
+    background: linear-gradient(90deg, var(--colored-border), black);
     color: white;
     font-size: 25px;
 }
@@ -191,17 +201,12 @@ h2 {
 
 #about-me:hover {
    border-color:var(--colored-border);
-   box-shadow: 0 0 30px 25px rgb(190, 165, 20);
+   box-shadow: 0 0 30px 25px var(--colored-border);
 }
 
 .project-example {
    margin-bottom: 20px;
    padding: 0px;
-}
-
-button {
-    background-color: black;
-    
 }
 
 /*Styling the borders*/
@@ -217,14 +222,6 @@ button:hover {
 
 #main-anchor {
     display: block;   
-}
-
-.button {
-    display: flex;
-    justify-content: flex-end;
-    margin: 10px;
-    padding: 10px;
-    position: relative;
 }
 
 /*Begin Styling Footer of the Page*/
